--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: InterXAI
 email: felixo2@illinois.edu
 description: Human-Centered Explainable AI meets Intertextuality
 baseurl: "/interxai.github.io"
+url: "https://bfiliks.github.io"
 
 collections:
   posts:
