--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: InterXAI
+title: InterXAI: Human-Centered Explainable AI and Intertextual Critique
 baseurl: "/interxai.github.io"
 url: "https://bfiliks.github.io"
 theme: minima
