Remove baseurl for Netlify

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "InterXAI: Human-Centered Explainable AI and Intertextual Critique"
-baseurl: "/interxai.github.io"
+baseurl: ""
 url: "https://bfiliks.github.io"
 theme: minima
 
