--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,27 @@
 title: "InterXAI: Human-Centered Explainable AI and Intertextual Critique"
-description: A platform for showcasing explainable AI systems with intertextual, human-centered critique.
-url: "https://bfiliks.github.io"
-baseurl: "/interxai.github.io"
+description: A platform for exploring human-centered Explainable AI and intertextual critique.
+url: "https://bfiliks.github.io" # for GitHub Pages
+baseurl: "/interxai.github.io"   # for GitHub Pages — set to "" for Netlify
+
+# Auto-switch baseurl for Netlify if needed (optional)
+# If you want only one config, comment out the baseurl line above when using Netlify
+
 theme: minima
-
-markdown: kramdown
-
 permalink: pretty
+markdown: kramdown
 
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+
+# Enable Netlify Forms
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: default
+
+# Form support (Netlify will detect and process this automatically)
+collections:
+  case_studies:
+    output: true
