--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 title: "InterXAI: Human-Centered Explainable AI and Intertextual Critique"
 description: A platform for exploring human-centered Explainable AI and intertextual critique.
 
-# Default values (for GitHub Pages)
-url: "https://bfiliks.github.io"
-baseurl: "/interxai.github.io"
+# Netlify/GitHub Pages dual support
+url: "${URL}"        # Will be replaced by Netlify env variable
+baseurl: "${BASEURL}" # Will be replaced by Netlify env variable
 
-# Netlify overrides these via environment variables if set
 theme: minima
 permalink: pretty
 markdown: kramdown
