--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,9 @@
 [build]
-  command = "jekyll build"
+  command = "bundle exec jekyll build --config _config_netlify.yml"
   publish = "_site"
-  environment = { JEKYLL_ENV = "netlify", URL = "https://interxai.netlify.app", BASEURL = "" }
+
+[build.environment]
+  RUBY_VERSION = "3.2.2"
+
+[context.production.environment]
+  JEKYLL_ENV = "production"
