--- a/config_github.yml
+++ b/config_github.yml
@@ -1,5 +1,5 @@
 title: "InterXAI: Human-Centered Explainable AI and Intertextual Critique"
-description: A platform for exploring human-centered Explainable AI and intertextual critique.
+description: "A platform for exploring human-centered Explainable AI and intertextual critique."
 
 url: "https://bfiliks.github.io"
 baseurl: "/interxai.github.io"
