Update and rename config_netlify.yml to _config_netlify.yml

--- a/_config_netlify.yml
+++ b/_config_netlify.yml
@@ -1,8 +1,8 @@
 title: "InterXAI: Human-Centered Explainable AI and Intertextual Critique"
-description: "A platform for exploring human-centered Explainable AI and intertextual critique."
+description: A platform for exploring human-centered Explainable AI and intertextual critique.
 
 url: "https://interxai.netlify.app"
-baseurl: ""  # No baseurl on Netlify
+baseurl: ""  # empty for Netlify
 
 theme: minima
 permalink: pretty
